Begin move to using gorm as the database layer
Stripping out the raw SQLX database interations for Gorm.
